# substrate-winter-2023-hackathon

./: Cargo.toml
node/: Cargo.toml
node/pallets/test-proofs/: Cargo.toml
node/pallets/test-proofs/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
