
[workspace.package]
authors = ["Bilinearity"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-sdk.git"
license = "GPL-3.0-only"

[profile.release]
panic = "unwind"

resolver = "2"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]

[workspace.dependencies]
# Frame
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }

# Pallets
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }

# Client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }

# Primitives
sp-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }

# RPC
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }

# Util
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk/", branch = "release-polkadot-v1.1.0", default-features = false }

# Local
node-template-runtime = { path = "runtime", default-features = false }
pallet-template = { path = "pallets/template", default-features = false }